--- a/mastery-front-end-shuttle-smashers/docs/style.css
+++ b/mastery-front-end-shuttle-smashers/docs/style.css
@@ -19,13 +19,13 @@ body {
     text-align: center;
 }
 
-.album-name-display {
+.player-name-display {
   text-decoration: underline;
   padding: 1rem;
   font-weight: 900;
 }
 
-.artist-name-display {
+.team-name-display {
   text-decoration: underline;
   padding: 1rem;
   font-weight: 900;
@@ -43,11 +43,11 @@ body {
   justify-content: center;
 }
 
-.artists-button {
+.teams-button {
   border: 2px solid black;
 }
 
-.artist-card {
+.team-card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -57,13 +57,13 @@ body {
   width: 12rem;
 }
 
-.artist-cards {
+.team-cards {
   /* width: 90vw;
   max-width: 45rem; */
   width: 45rem;
 }
 
-.artist-card__imageUrl{
+.team-card__imageUrl{
   max-width: 10rem;
 }
 
@@ -73,7 +73,7 @@ form {
   max-width: 45rem;
 }
 
-.artist-cards {
+.team-cards {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
